--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
-  "name": "heroku-deployment",
-  "version": "1.0.0",
-  "description": "Deploying a simple Express application with no database using Heroku",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nitromagix/heroku-deployment.git"
-  },
-  "author": "Martin Prost",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/nitromagix/heroku-deployment/issues"
-  },
-  "homepage": "https://github.com/nitromagix/heroku-deployment#readme",
-  "dependencies": {
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1"
-  }
+   "name": "heroku-deployment",
+   "version": "1.0.0",
+   "engines": {
+      "node": "v16.14.0"
+   },
+   "description": "Deploying a simple Express application with no database using Heroku",
+   "main": "server.js",
+   "scripts": {
+      "test": "echo \"Error: no test specified\" && exit 1"
+   },
+   "repository": {
+      "type": "git",
+      "url": "git+https://github.com/nitromagix/heroku-deployment.git"
+   },
+   "author": "Martin Prost",
+   "license": "ISC",
+   "bugs": {
+      "url": "https://github.com/nitromagix/heroku-deployment/issues"
+   },
+   "homepage": "https://github.com/nitromagix/heroku-deployment#readme",
+   "dependencies": {
+      "dotenv": "^16.0.1",
+      "express": "^4.18.1",
+      "nodemon": "^2.0.16"
+   }
 }
